# sympy2llvm

./: .gitignore  README.md  gentest.py  pyproject.toml
.github/workflows/: filecheck.yml  publish.yml
sympy2llvm/: __main__.py  base.py  llvm.py  main.py  mlir.py
sympy2xdsl/: __main__.py  base.py  convert.py  llvm.py  main.py  mlir.py
test/filecheck/: add.test  basic.py
tests/filecheck/: add.test  div.test  exp.test  fun.test  lit.cfg  log.test  mul.test  pow.test  sub.test  varadd.test
